# market_app_fast_api

./: .env-example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: config.py  database.py  main.py
app/migrations/: env.py
app/migrations/versions/: 2024_08_21_2028-4e66d442ce2c_initial_revision.py
app/products/: models.py  routers.py  schemas.py
app/users/: auth.py  models.py  routers.py
